--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@11labs/react": "^0.0.7",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "next": "15.1.7",
+    "next-transpile-modules": "^10.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
