--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,13 @@
-app = "punch-out-ai"  # Replace with your Fly app name
+app = "punch-out-ai"  # Your Fly app name
 
 kill_signal = "SIGINT"
 kill_timeout = 5
 
-[build]
-  context = "."              # Use the repository root as the build context
-  builder = "heroku/buildpacks:20"
-  buildpacks = ["heroku/python"]
-  [build.args]
-    APP_ROOT = "python"      # Tell the buildpack that your app is in the "python" folder
-
 [env]
-  PORT = "8000"              # Set the port to 8000
-
-# Entry point: run your FastAPI app with uvicorn.
-entrypoint = "uvicorn api:app --reload --host 0.0.0.0 --port $PORT"
+  PORT = "8000"
 
 [[services]]
-  internal_port = 8000       # Expose port 8000 internally
+  internal_port = 8000
   protocol = "tcp"
 
   [[services.ports]]
