--- a/react-client/package.json
+++ b/react-client/package.json
@@ -14,6 +14,7 @@
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "elevenlabs": "^1.51.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
